Bug#38426 - Backup of partitioned Falcon table will not use snapshot driver

Followup patch - compile partition-specific parts of backup code only if partitioning is included in the server